--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,3 +33,18 @@ body {
   background-color: #f5f5f5;
 }
 
+.this-page {
+  background-color: rgb(231, 231, 231);
+  box-sizing: border-box;
+  color: rgb(85, 85, 85);
+  cursor: auto;
+  display: block;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 15px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+}
+
