--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -1,6 +1,6 @@
 <article>
   <header class="page-header">
-    <h1>About us</h1>
+    <h1><%= @title %></h1>
   </header>
   <p>Here you can learn all about us!</p>
 </article>
