--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,10 @@
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to_unless_current "About", about_path do
-              content_tag(:span, "About", class: "this-page") end %></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><%= link_to_unless_current "About", about_path do |label|
+              content_tag(:span, label, class: "this-page") end %></li>
+            <li> <%= link_to_unless_current "Contact", contact_path do |label|
+               content_tag(:span, label, class: "this-page") end %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -51,9 +52,25 @@
     </nav>
 
     <!-- Begin page content -->
-  <main class="container main" role="main">
-    <%= yield %>
-  </main>
+<main class="container main" role="main">
+  <% if flash.alert %>
+    <div class="messages">
+      <div class="alert alert-danger" role="alert">
+        <%= flash.alert %>
+      </div>
+    </div>
+  <% end %>
+
+  <% if flash.notice %>
+    <div class="messages">
+      <div class="alert alert-success" role="alert">
+        <%= flash.notice %>
+      </div>
+    </div>
+  <% end %>
+
+  <%= yield %>
+</main>
 
   <footer class="footer">
     <div class="container">
